feat: add leaflet code example

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,10 @@
     <title>Intégration TeFenua dynamique (via GetCapabilities)</title>
   </head>
   <body>
-    <div id="map"></div>
+    <div id="container">
+      <div id="ol-map"></div>
+      <div id="ll-map"></div>
+    </div>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
